[package]
name = "blog"
version = "0.1.0"
authors = ["swnb <swnblovego@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
pulldown-cmark = { version = "0.4", default-features = false }
regex = "1.1.6"
actix-web = "0.7.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["mysql"] }
uuid = { version = "0.7.0",features = ["v4"] }
