[package]
name = "blog"
version = "0.1.0"
authors = ["swnb <swnblovego@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
pulldown-cmark = { version = "0.4", default-features = false }
regex = "1.1.6"
actix = "0.8.3"
actix-web = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.4"
diesel = { version = "1.0.0", features = ["postgres","uuid","chrono"] }
r2d2="0.8.5"
r2d2-diesel = "1.0.0"
env_logger = "0.6.1"
log = "0.4.8"
base64 = "0.10.1"
uuid = {version = "0.6.5", features = ["serde","v4"]}
chrono = {version = "0.4.7", features = ["serde"] }